<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    
    <TextView
        android:id="@+id/statistics_item_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/txt_string_21"
        android:textSize="18sp" />
	<TextView
         android:layout_width="1dp"
         android:layout_height="fill_parent"
         android:background="#000000" />
     <TextView
         android:id="@+id/statistics_item_2"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_weight="1"
       android:layout_gravity="center"
       android:gravity="center"
       android:text="@string/txt_string_22"
       android:textSize="18sp" />
  	<TextView
       android:layout_width="1dp"
       android:layout_height="fill_parent"
       android:background="#000000" />
    <TextView
        android:id="@+id/statistics_item_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/txt_string_23"
        android:textSize="18sp" />
	<TextView
         android:layout_width="1dp"
         android:layout_height="fill_parent"
         android:background="#000000" />
    <TextView
        android:id="@+id/statistics_item_4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/txt_string_24"
        android:textSize="18sp" />
</LinearLayout>