<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:background="#000000" 
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_marginTop="20dp"/>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">
      
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_string_21"
            android:textSize="18sp" />
	<TextView
         android:layout_width="1dp"
         android:layout_height="fill_parent"
         android:background="#000000" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_string_22"
            android:textSize="18sp" />
        	<TextView
         android:layout_width="1dp"
         android:layout_height="fill_parent"
         android:background="#000000" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_string_23"
            android:textSize="18sp" />
	<TextView
         android:layout_width="1dp"
         android:layout_height="fill_parent"
         android:background="#000000" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_string_24"
            android:textSize="18sp" />

   </TableRow>
	<TextView
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:background="#000000" />
	<ListView
	    android:id="@+id/statistics_list"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dip" >
    </ListView>
    
	<TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:orientation="vertical" >
		<Button
            android:id="@+id/statistics_back"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_string_2" />
    </TableRow>
</LinearLayout>