<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:layout_marginBottom="5dip" >

        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <TableRow
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="5dp"
		        android:layout_marginRight="5dp"
		        android:layout_marginTop="5dp" >

                <TextView
		            android:id="@+id/login_tv1"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center"
		            android:layout_weight="1"
		            android:gravity="left"
		            android:textSize="14sp" />

		        <TextView
		            android:id="@+id/login_tv2"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center"
		            android:layout_weight="1"
		            android:gravity="right"
		            android:textSize="14sp" />

		     </TableRow>
        
			<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/app_name"
                android:textSize="30sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/title_string_01"
                android:textSize="20sp" />
   
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp" >
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:gravity="right"
            android:text="@string/txt_string_01"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/login_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:textSize="16sp" />
   </TableRow>
   
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:gravity="right"
            android:text="@string/txt_string_02"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/login_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:textSize="16sp" />

   </TableRow>

   <CheckBox
       android:id="@+id/login_3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="right"
       android:layout_marginRight="20dp"
       android:layout_marginTop="20dp"
       android:gravity="center_vertical|start"
       android:text="@string/txt_string_0" />

   </LinearLayout>
   </ScrollView>
    
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:orientation="vertical" >
		<Button
            android:id="@+id/login_info"
            android:layout_marginLeft="5dp"
        	android:layout_marginRight="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_string_02" />
    	<Button
            android:id="@+id/login_btn"
            android:layout_marginLeft="5dp"
        	android:layout_marginRight="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_string_01" />
    </TableRow>

</LinearLayout>